# graphic-labs

./: README.md
experiment0/: README.md
experiment0/code/: 1.model_loading.vs  model_loading.cpp
experiment1/: README.md
experiment1/code/: main.cpp
experiment2/: CMakeLists.txt  README.md
experiment2/code/: aabb.h  camera.h  face.h  hittable.h  hittable_list.h  main.cc  material.h  objectReader.h  ray.h  rtweekend.h  sphere.h  vec3.h
experiment3/: README.md
experiment3/exp301/code/: main.cpp  main2.cpp
experiment3/exp302/code/: main.cpp
experiment3/exp303/code/: main.cpp
